--- a/index.html
+++ b/index.html
@@ -2,13 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Midori Kocak</title>
+    <title>oseysters</title>
+    <style>
+        body {
+  margin: 0 auto;
+  max-width: 50em;
+  font-family: "Helvetica", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  padding: 4em 1em;
+  color: #555;
+  background-color: #f2f2f2;
+}
+
+h2 {
+  margin-top: 1em;
+  padding-top: 1em;
+}
+
+h1, h2, strong {
+  color: #333;
+}
+
+input[type=text], input[type=email], select, textarea {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+button[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+button[type=submit]:hover {
+  background-color: #45a049;
+}
+    </style>
+</head>
+</html>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 <body itemscope itemtype="http://schema.org/Person">
 <header>
-    <h1 itemprop="name">Midori Kocak</h1>
-    <img src="img/image.png" width="150" alt="Midori Kocak"/>
+    <h1 itemprop="name">oseysters</h1>
+    <img src="Img/image.jpg" width="140" alt="oseysters"/>
     <nav>
         <ul>
             <li><a href="#summary">Summary</a></li>
@@ -33,26 +82,11 @@
             <h2>Work</h2>
             <ul>
                 <li>
-                    <strong >McKinsey &amp; Company</strong><br>
-                    <a href="http://mckinsey.com" itemprop="url">mckinsey.com</a><br>
-                    <small>Senior Software Engineer</small>
+                    <strong >TURKIYE IS BANKASI</strong><br>
+                    <a href="http://isbank.com.tr" itemprop="url">isbank.com.tr</a><br>
+                    <small>customer representive</small>
                     <br>
-                    March 2018 - Present<br>
-                </li>
-
-                <li>
-                    <strong >Freelancer</strong><br>
-                    <a href="http://github.com/midorikocak" itemprop="url">github.com/midorikocak</a><br>
-                    <small>Software Engineer</small>
-                    <br>
-                    September 2016 - February 2018<br>
-                </li>
-                <li>
-                    <strong >Massive Interactive</strong><br>
-                    <a href="http://massive.co" itemprop="url">massive.co</a><br>
-                    <small>Frontend Engineer</small>
-                    <br>
-                    August 2015 - August 2016<br>
+                    MaY 2010 - Present<br>
                 </li>
             </ul>
         </section>
@@ -60,11 +94,11 @@
             <h2>Education</h2>
             <ul>
                 <li itemprop="alumniOf" itemscope itemtype="http://schema.org/CollegeOrUniversity">
-                    <strong itemprop="name">Sabanci University</strong><br>
-                    <a href="http://sabanciuniv.edu" itemprop="url">sabanciuniv.edu</a><br>
-                    <small>Computer Science & Engineering</small>
+                    <strong itemprop="name">walshcollege</strong><br>
+                    <a href="http://walshcollege.edu" itemprop="url">walshcollege.edu</a><br>
+                    <small>master of science information</small>
                     <br>
-                    2006 - 2010<br>
+                    2017 - 2019<br>
                 </li>
             </ul>
         </section>
@@ -76,15 +110,6 @@
                 </li>
                 <li>
                     English - Fluent
-                </li>
-                <li>
-                    Italian - Fluent
-                </li>
-                <li>
-                    Czech - Intermediate
-                </li>
-                <li>
-                    Japanese - Beginner
                 </li>
             </ul>
         </section>
@@ -108,14 +133,14 @@
     <h2>Social</h2>
     <nav>
         <ul>
-            <li><a href="http://linkedin.com/in/midorikocak">Linkedin</a></li>
+            <li><a href="http://linkedin.com/in/oseysters">Linkedin</a></li>
         </ul>
     </nav>
     <section id="contact">
         <h2>Contact</h2>
         <ul>
             <li>
-                <a href="mailto:mtkocak@gmail.com">E-mail</a>
+                <a href="mailto:oseysters@gmail.com">E-mail</a>
             </li>
             <li>
                 <a href="/me/contact.html">Contact Form</a>
